Update Full Project - Data Analysis using SQL to guide Business decisions for Chinook.ipynb

--- a/Full Project - Data Analysis using SQL to guide Business decisions for Chinook.ipynb
+++ b/Full Project - Data Analysis using SQL to guide Business decisions for Chinook.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## 1. Introduction\n",
     "\n",
-    "The aim of this project is to explore a modified version of the Chinook database using SQL and answer some business questions. The Chinook database represents a fictional digital media shop, based on real data from an iTunes Library and manually generated data. The database is provided as a SQLite database file called 'chinook.db'.  It contains information about employees, customers, purchases, and everything to do with the tracks that are on the platform (artists, albums, genres, playlists, etc.). \n",
+    "The aim of this project is to explore a modified version of the Chinook database using SQL and answer some business questions. The database is provided as a SQLite database file called 'chinook.db'.  It contains information about employees, customers, purchases, and everything to do with the tracks that are on the platform (artists, albums, genres, playlists, etc.). \n",
     "\n",
     "Here's a schema diagram for the database:\n",
     "![chinook](https://s3.amazonaws.com/dq-content/189/chinook-schema.svg)"
